run as non admin

--- a/.github/workflows/test-scoop-bucket.yaml
+++ b/.github/workflows/test-scoop-bucket.yaml
@@ -8,6 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Test Scoop Bucket
+        user: non-root
         run: |
           # Install Scoop
           Set-ExecutionPolicy RemoteSigned -Scope CurrentUser
