--- a/.github/workflows/test-scoop-bucket.yaml
+++ b/.github/workflows/test-scoop-bucket.yaml
@@ -8,7 +8,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Test Scoop Bucket
-        user: non-root
         run: |
           # Install Scoop
           Set-ExecutionPolicy RemoteSigned -Scope CurrentUser
@@ -18,3 +17,4 @@ jobs:
           scoop install mcsh
           # Run any tests for the app
           mcsh version
+      - user: non-root
